clase3-k8s/k8s/currency-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-deployment
  namespace: currency
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-deployment
  template:
    metadata:
      labels:
        app: currency-deployment
    spec:
      containers:
        - name: currency-deployment
          image: xhuniktzi/currency-svc:v2
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: currency-service
  namespace: currency
spec:
  type: ClusterIP
  selector:
    app: currency-deployment
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-ingress
  namespace: currency
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: currency-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/system"
        backend:
          service:
            name: currency-service
            port: 
              number: 80
